fixing spacing for new headline area

--- a/css/styles.less
+++ b/css/styles.less
@@ -438,7 +438,15 @@ nav.navbar {
 // end How-Tos Page
 
 // Blog
+.single-post {
+  footer {
+    margin-top: 60px; // get out of the way of the big banner
+  }
+}
 .blog, .single-post {
+  .pn-post-list {
+    margin-top: 100px; // get out of the way of the big banner
+  }
   .post {
     .pn-post-title {
       font-style: normal;
@@ -457,3 +465,10 @@ nav.navbar {
   }
 }
 // end Blog page
+
+// Single event
+.single-event {
+  .pn-copy {
+    padding-top: 10rem;
+  }
+}
